--- a/PatPet/Base.lproj/Main.storyboard
+++ b/PatPet/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -474,8 +475,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Message" id="69c-rA-LFZ">
-                        <barButtonItem key="leftBarButtonItem" title="X" width="20" style="plain" id="Aln-jN-mZ0">
-                            <inset key="imageInsets" minX="0.0" minY="10" maxX="20" maxY="10"/>
+                        <barButtonItem key="rightBarButtonItem" image="icn-cancel.png" width="20" style="plain" id="Aln-jN-mZ0">
+                            <inset key="imageInsets" minX="30" minY="15" maxX="0.0" maxY="15"/>
                             <color key="tintColor" red="0.81302750109999999" green="0.71162283420000005" blue="0.26488092540000002" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <action selector="done:" destination="jRp-WC-yHZ" id="euO-0P-Fcd"/>
@@ -552,6 +553,12 @@
                                     <constraint firstAttribute="height" constant="100" id="yuC-dV-DoN"/>
                                 </constraints>
                                 <state key="normal" title="Button" image="icn_preference.png"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="D8u-Nz-XCx"/>
+                                        <exclude reference="PAp-Be-kXb"/>
+                                    </mask>
+                                </variation>
                                 <connections>
                                     <segue destination="Wcp-9h-8SI" kind="custom" identifier="Third" customClass="SWRevealViewControllerSegue" id="fOr-6g-NAf"/>
                                 </connections>
@@ -601,13 +608,14 @@
                             <constraint firstItem="gGj-js-DJs" firstAttribute="bottom" secondItem="MWm-KJ-GD1" secondAttribute="bottom" id="21U-YT-mOD"/>
                             <constraint firstItem="MWm-KJ-GD1" firstAttribute="leading" secondItem="98J-uj-5ym" secondAttribute="leading" id="3My-1K-qP1"/>
                             <constraint firstItem="MWm-KJ-GD1" firstAttribute="bottom" secondItem="98J-uj-5ym" secondAttribute="bottom" id="6Wh-Fa-5Q3"/>
-                            <constraint firstItem="Z0q-9B-Ubi" firstAttribute="bottom" secondItem="gGj-js-DJs" secondAttribute="top" constant="-40" id="6y5-kw-TQh"/>
+                            <constraint firstItem="gGj-js-DJs" firstAttribute="top" secondItem="Z0q-9B-Ubi" secondAttribute="bottom" constant="40" id="6y5-kw-TQh"/>
                             <constraint firstItem="Z0q-9B-Ubi" firstAttribute="top" secondItem="o0Q-E0-tWE" secondAttribute="top" constant="20" id="A19-dY-Ns7"/>
                             <constraint firstItem="o0Q-E0-tWE" firstAttribute="centerY" secondItem="PWO-nK-wMT" secondAttribute="centerY" id="Dhw-wI-ALM"/>
                             <constraint firstItem="o0Q-E0-tWE" firstAttribute="top" secondItem="98J-uj-5ym" secondAttribute="bottom" constant="20" id="FNj-od-6Kz"/>
                             <constraint firstItem="LI4-S1-QKC" firstAttribute="top" secondItem="gGj-js-DJs" secondAttribute="bottom" id="FXS-uF-LMZ"/>
                             <constraint firstItem="6Qj-Xq-Mlw" firstAttribute="centerX" secondItem="gGj-js-DJs" secondAttribute="centerX" id="Ioe-FY-H69"/>
                             <constraint firstItem="MWm-KJ-GD1" firstAttribute="top" secondItem="98J-uj-5ym" secondAttribute="top" id="MkN-BM-VdB"/>
+                            <constraint firstItem="gGj-js-DJs" firstAttribute="top" relation="lessThanOrEqual" secondItem="Z0q-9B-Ubi" secondAttribute="bottom" multiplier="1.5" constant="40" id="Mm0-2A-4jj"/>
                             <constraint firstItem="98J-uj-5ym" firstAttribute="centerX" secondItem="h62-e3-eiW" secondAttribute="centerX" constant="-40" id="UWw-Rt-fwK"/>
                             <constraint firstItem="Z0q-9B-Ubi" firstAttribute="leading" secondItem="o0Q-E0-tWE" secondAttribute="leading" id="UjG-Gn-acL"/>
                             <constraint firstItem="MWm-KJ-GD1" firstAttribute="trailing" secondItem="98J-uj-5ym" secondAttribute="trailing" id="VmG-uL-Cor"/>
@@ -630,7 +638,7 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                     <connections>
-                        <outlet property="activateLabel" destination="Z0q-9B-Ubi" id="spg-f6-DvK"/>
+                        <outlet property="activateLabel" destination="Z0q-9B-Ubi" id="Vq7-ld-SKT"/>
                         <outlet property="btnPreference" destination="gGj-js-DJs" id="SbB-3w-kfK"/>
                         <outlet property="btnSetting" destination="6Qj-Xq-Mlw" id="Upv-eK-Lyt"/>
                         <outlet property="mainView" destination="h62-e3-eiW" id="Rf2-2a-fng"/>
@@ -667,7 +675,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3fS-7p-aXt">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="780"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pairing Machine!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hx4-ha-jdt">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Pairing Machine!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hx4-ha-jdt">
                                                 <rect key="frame" x="77" y="15" width="259" height="70"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="70" id="fan-T8-I0k"/>
@@ -676,8 +684,8 @@
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="you've got preferences? Select the following options!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fWg-bn-4Qw">
-                                                <rect key="frame" x="30" y="90" width="354" height="70"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="You've got preferences? Select the following options!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fWg-bn-4Qw">
+                                                <rect key="frame" x="17" y="90" width="380" height="70"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="70" id="7yk-8N-8jV"/>
                                                 </constraints>
@@ -685,7 +693,7 @@
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icn-no-fur-y.png" translatesAutoresizingMaskIntoConstraints="NO" id="ubi-BP-3Ab">
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icn-fur-y-1.png" translatesAutoresizingMaskIntoConstraints="NO" id="ubi-BP-3Ab">
                                                 <rect key="frame" x="157" y="170" width="100" height="100"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="100" id="ESQ-Xe-vsO"/>
@@ -696,11 +704,11 @@
                                         <color key="backgroundColor" red="0.92549019610000005" green="0.92549019610000005" blue="0.92549019610000005" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstItem="fWg-bn-4Qw" firstAttribute="top" secondItem="Hx4-ha-jdt" secondAttribute="bottom" constant="5" id="HeY-iU-v2j"/>
-                                            <constraint firstItem="fWg-bn-4Qw" firstAttribute="leading" secondItem="3fS-7p-aXt" secondAttribute="leading" constant="30" id="KCx-0t-Ffr"/>
+                                            <constraint firstItem="fWg-bn-4Qw" firstAttribute="leading" secondItem="3fS-7p-aXt" secondAttribute="leading" constant="70" id="KCx-0t-Ffr"/>
                                             <constraint firstItem="Hx4-ha-jdt" firstAttribute="top" secondItem="3fS-7p-aXt" secondAttribute="top" constant="15" id="Lss-9P-FeS"/>
                                             <constraint firstItem="ubi-BP-3Ab" firstAttribute="top" secondItem="fWg-bn-4Qw" secondAttribute="bottom" constant="10" id="PqA-0y-MXq"/>
                                             <constraint firstItem="Hx4-ha-jdt" firstAttribute="centerX" secondItem="3fS-7p-aXt" secondAttribute="centerX" id="QvZ-tz-mau"/>
-                                            <constraint firstAttribute="trailing" secondItem="fWg-bn-4Qw" secondAttribute="trailing" constant="30" id="TO2-OP-o7w"/>
+                                            <constraint firstAttribute="trailing" secondItem="fWg-bn-4Qw" secondAttribute="trailing" constant="70" id="TO2-OP-o7w"/>
                                             <constraint firstItem="ubi-BP-3Ab" firstAttribute="centerX" secondItem="3fS-7p-aXt" secondAttribute="centerX" id="fa3-s8-PLR"/>
                                             <constraint firstAttribute="height" constant="780" id="g6H-q2-9KN"/>
                                             <constraint firstItem="ubi-BP-3Ab" firstAttribute="top" secondItem="3fS-7p-aXt" secondAttribute="top" constant="150" id="nGI-7b-IDT"/>
@@ -718,7 +726,7 @@
                                         </variation>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" red="0.99375373125076294" green="0.71397101879119873" blue="0.72558891773223877" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.91764705879999997" green="0.91764705879999997" blue="0.91764705879999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="3fS-7p-aXt" secondAttribute="trailing" id="Jat-g9-gm8"/>
                                     <constraint firstItem="3fS-7p-aXt" firstAttribute="top" secondItem="Xbf-49-pZe" secondAttribute="top" id="Od4-6d-eon"/>
@@ -762,7 +770,9 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                     <connections>
                         <outlet property="backButtonOfPref" destination="Fqp-7C-WeE" id="GQY-Uy-Eai"/>
+                        <outlet property="catTypeImage" destination="ubi-BP-3Ab" id="s10-Hi-jgY"/>
                         <outlet property="moreButton" destination="Wfq-Xc-KDI" id="ksd-i2-Oyn"/>
+                        <outlet property="scrollView" destination="Xbf-49-pZe" id="kPB-DS-bpa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8hu-qg-aXD" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -890,7 +900,8 @@
         <image name="Prof_s11.png" width="975" height="1008"/>
         <image name="bg2.png" width="861" height="861"/>
         <image name="icn-back.png" width="44" height="44"/>
-        <image name="icn-no-fur-y.png" width="117" height="108"/>
+        <image name="icn-cancel.png" width="48" height="48"/>
+        <image name="icn-fur-y-1.png" width="117" height="108"/>
         <image name="icn_chat_bf.png" width="80" height="80"/>
         <image name="icn_preference.png" width="130" height="130"/>
         <image name="icn_setting.png" width="130" height="130"/>
@@ -898,7 +909,7 @@
         <image name="p18.png" width="861" height="861"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="q3C-TN-lK2"/>
         <segue reference="fOr-6g-NAf"/>
+        <segue reference="HFR-Lr-jMj"/>
     </inferredMetricsTieBreakers>
 </document>
